force-app/main/default/objects/Quotation_Item__c/fields/agent_bsls_id__c.field-meta.xml
<CustomField>
    <fullName>agent_bsls_id__c</fullName>
    <formula>Agent__r.BSLS_ID__c</formula>
    <label>agent bsls id</label>
    <type>Text</type>
</CustomField>