force-app/main/default/objects/Quotation_Item__c/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <formula>Agent__r.Id</formula>
    <label>Agent ID</label>
    <type>Text</type>
</CustomField>