force-app/main/default/objects/Quotation_Item__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Quotation__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Port_of_Loading__c</columns>
    <columns>Port_of_Discharge__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Sea_Freight__c</columns>
    <columns>Total__c</columns>
    <columns>RMS__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>